recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:2: error: not found: value lenght
	spiral(steps,angle,lenght,increment);
                           ^Spiral:6: error: not found: value lenght
	 	spiral(i,angle,lenght+increment,increment);
                               ^Spiral:7: error: not found: value lenght
	 	avance(lenght+increment);
                       ^