recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	spiral(steps,angle,lenght,increment);
	 avance(length);
	 gauche(angle);
	 for (i<-0 to steps-1 by -1){
	 	spiral(i,angle,lenght+increment,increment);
	 	avance(lenght+increment);
	 	gauche(angle);
	 		
	}
}
